Fixed spacing of content Added padding, font size and margin

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -16,7 +16,7 @@ h1 {
   padding: 0 1rem;
 
   @media (min-width: map-get($breakpoints , 'medium')) {
-    font-size: 3em;
+    font-size: 3.5em;
     padding: 0;
     text-align: left;
     width: 400px;
