--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -42,7 +42,7 @@
 
 .card {
     background: $very-dark-magenta;
-    padding: 1.5rem;
+    padding: 2rem;
     border-radius: .5rem;
     display: grid;
     grid-template-columns: auto 1fr;
